# applied-computing

./: .gitignore  CMakeLists.txt  README.md  lista_1_1.cpp  main.cpp  stack_gen.hpp
exe1/: CMakeLists.txt  arvore.hpp  main.cpp
exe2/: CMakeLists.txt  arvore.hpp  main.cpp
exe3/: CMakeLists.txt  arvore.hpp  main.cpp
exe4/: CMakeLists.txt  arvore.hpp  main.cpp
exe5/: CMakeLists.txt  arvore.hpp  main.cpp
exe6/: CMakeLists.txt  CMakeLists.txt.user.41f0a43  arvore.hpp  main.cpp
exe7/: CMakeLists.txt  main.cpp
extra-exe1/: CMakeLists.txt
extra-exe2/: CMakeLists.txt  hash.hpp
extra-exe4/: grafo.hpp
extra-exe5/: main.cpp
extra/exe1/: CMakeLists.txt  arvore.hpp  main.cpp
extra/extra-exe1/: main.cpp
extra/extra-exe2/: main.cpp
extra/extra-exe4/: CMakeLists.txt  main.cpp
extra/extra-exe5/: CMakeLists.txt  MaxHeap.hpp  main.cpp  maxheap.hpp
